--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,13 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="container">
+	<% flash.each do |key,value| %>
+		<div class="alert alert-<%=key%>">
+			<%= value %>
+		</div>
+	<% end %>
 	<%= yield %>
+
 </div>
 </body>
 </html>
