--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,34 +21,46 @@
       <%= link_to "ILab Twitter", root_path, class: 'navbar-brand' %>
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active">
-        	<%= link_to "New Tweet", new_tweet_path %>
-        </li>
-        <li>
-        	<%= link_to "News Feed", tweets_path %>
-        </li>
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav">
+	        <li class="active">
+	        	<%= link_to "New Tweet", new_tweet_path %>
+	        </li>
+	        <li>
+	        	<%= link_to "News Feed", tweets_path %>
+	        </li>
 
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
+	      </ul>
+	      <ul class="nav navbar-nav navbar-right">
+	    	<li>
+		    	<% if user_signed_in? %>
+		    		<%= link_to "Log out", destroy_user_session_path method: :delete %>
+		    	<% else %>
+		    		<%= link_to "Sign in", new_user_session_path %>
+		    	<% end %>
+	    	</li>
+	       
+	        <li class="dropdown">
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+	          <ul class="dropdown-menu" role="menu">
+	            <li><a href="#">Action</a></li>
+	            <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+	            <li class="divider"></li>
+	            <li><a href="#">Separated link</a></li>
+	          </ul>
+	        </li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 <div class="container">
+	<% if user_signed_in? %>
+		The user is signed in
+	<% else %>
+		You are not signed in
+	<% end %>
 	<% flash.each do |key,value| %>
 		<div class="alert alert-<%=key%>">
 			<%= value %>
