added pic uploading functionality

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,1 +1,7 @@
-This shows the profile
+<%= image_tag @profile.picture, style: 'width: 200px; height: 200px' %>
+<br />
+
+<%= @profile.frist_name %>
+
+<br />
+<%= @profile.description %>
